<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.kik-v.commons</groupId>
	<artifactId>parent</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>KIK-V Commons</name>
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
		<spring.boot.version>2.7.8</spring.boot.version>
		<nimbus-jose-jwt.version>9.30.1</nimbus-jose-jwt.version>
		<junit.version>5.9.2</junit.version>
		<jena.version>4.7.0</jena.version>
	</properties>
	<parent>
		<groupId>com.ocs.cicd</groupId>
		<artifactId>parent</artifactId>
		<version>[1.1.28,1.2.0)</version>
		<relativePath />
	</parent>
	<repositories>
		<repository>
			<id>gitlab-maven-ocs</id>
			<url>https://gitlab.opencirclesolutions.nl/api/v4/groups/ocs/-/packages/maven</url>
		</repository>
		<repository>
			<id>gitlab-maven-zin</id>
			<url>https://gitlab.opencirclesolutions.nl/api/v4/groups/zin/-/packages/maven</url>
		</repository>
		<repository>
			<id>danubetech-maven-releases</id>
			<url>https://repo.danubetech.com/repository/maven-releases/</url>
		</repository>
		<repository>
			<id>danubetech-maven-public</id>
			<url>https://repo.danubetech.com/repository/maven-public/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>gitlab-maven-ocs</id>
			<url>https://gitlab.opencirclesolutions.nl/api/v4/groups/ocs/-/packages/maven</url>
		</pluginRepository>
	</pluginRepositories>
	<distributionManagement>
		<repository>
			<id>gitlab-maven-ocs</id>
			<url>https://gitlab.opencirclesolutions.nl/api/v4/projects/258/packages/maven</url>
		</repository>
	</distributionManagement>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>commons</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>commons-spring</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>ds</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>ds-spring</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>gids</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>gids-spring</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<modules>
		<module>commons</module>
		<module>commons-spring</module>
		<module>ds</module>
		<module>ds-spring</module>
		<module>gids</module>
		<module>gids-spring</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<configuration>
					<suppressionFiles>
						<suppressionFile>project-suppression.xml</suppressionFile>
					</suppressionFiles>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
